HEAD
	+ Clean up openchange section in stub smb.conf file
	+ Fix typo in SambaLdapUser that fixes error in change email
	+ Change user modification hook from _modifyUser to _preModifyUser
	+ Throw DataExists exception if the user try to rename a user on a
	  container and already exists
	+ Check for duplicated DN on user creation and show a proper error, not
	  an internal exception.
	+ Remove group share on group deletion
	+ Set the setShareRightsReset flag on SambaSharesPermissions row deletion
	+ Samba log helper is now aware of utf8
	+ EBox::Samba::LdbObject::deleteObject - Delete all childs before self
	  deletion
3.2.13
	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
	  defer it until s4sync does the synchronization
	+ Typo fix in netbios validation
	+ Check if objects are system critical before deletion
	+ Improved migration code from 3.2.11
3.2.12
	+ Provision - Clear link attribute on __USERS__ entry when provisioning as
	  adc
	+ Provision - Remove DomainAdmins,Administrator and Guest from openLDAP
	              when reprovisioning as additional DC
	+ Do not hide domain guest account
	+ Fix share guest access, based on domain guest account enabled status
	+ LDB - Do not return users holding a servicePrincipalName by default
	+ Provision - Improve the LDAP OUs purge after join domain
	+ s4sync - Serveral fixes to make it more robust
	+ OU - Improve creation code
	+ LDB - Return OUs ordered, parents before childs
	+ Provision - Link accounts holding zentyal service principals
	+ Provision - Improve OU loading, skip zentyal internal OUs and linked
	+ Provision - Link containers at provision stage, creating them if not
	              exists. Ignore not linked OUs for sync operations.
	+ Provision - Set kerberos linked OU as visible only in advanced mode
	+ Provision - Check no OUs are created below OU=Users. This violate the
	              AD DIT, as OU=Users is linked to CN=Users.